adding class input accountType

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <legend>Account Type (Required)</legend>
         <label for="personalAccount"
           ><input
+            class="inline"
             type="radio"
             name="accountType"
             id="personalAccount"
@@ -60,7 +61,12 @@
           />Personal Account</label
         >
         <label for="businessAccount"
-          ><input type="radio" name="accountType" id="businessAccount" />
+          ><input
+            class="inline"
+            type="radio"
+            name="accountType"
+            id="businessAccount"
+          />
           Business Account
         </label>
       </fieldset>
