delete space business account

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             type="radio"
             name="accountType"
             id="businessAccount"
-          />
-          Business Account
+          />Business Account
         </label>
       </fieldset>
       <fieldset>
