add class inline term & conditions

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         </label>
         <label for="term-and-conditions"
           ><input
+            class="inline"
             type="checkbox"
             name="term-and-conditions"
             id="term-and-conditions"
